Add primary booking action to bottom nav

--- a/index.html
+++ b/index.html
@@ -173,6 +173,20 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"/><polyline points="14 2 14 8 20 8"/><line x1="16" y1="13" x2="8" y2="13"/><line x1="16" y1="17" x2="8" y2="17"/><line x1="10" y1="9" x2="8" y2="9"/></svg>
                 <span>History</span>
             </button>
+            <button class="nav-item nav-item-primary" data-target="page-booking-flow" aria-label="Book a walk">
+                <span class="nav-item-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <circle cx="12" cy="15.5" r="3.5"></circle>
+                        <circle cx="17.5" cy="9" r="1.8"></circle>
+                        <circle cx="6.5" cy="9" r="1.8"></circle>
+                        <circle cx="5" cy="15.5" r="1.5"></circle>
+                        <circle cx="19" cy="15.5" r="1.5"></circle>
+                        <line x1="12" y1="4" x2="12" y2="8"></line>
+                        <line x1="10" y1="6" x2="14" y2="6"></line>
+                    </svg>
+                </span>
+                <span>Book Walk</span>
+            </button>
              <button class="nav-item" data-target="page-inbox">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 22v-7a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v7"/><path d="M4 18h.01"/><path d="M2 14h.01"/><path d="M22 14h-.01"/><path d="M18 18h.01"/><path d="M6 18h.01"/><path d="M12 18h.01"/><path d="M16 5.86a4.5 4.5 0 1 0-8 0c0 1.5.63 3.05 1.76 4.14L12 12l2.24-2c1.13-1.09 1.76-2.64 1.76-4.14Z"/></svg>
                 <span>Messages</span>
