--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@
                 <!-- ===== PAGE: HOME/DASHBOARD ===== -->
                 <section class="page" id="page-home">
                     <div class="space-y-8 stagger-in">
-                        <div class="text-center pt-4">
-                            <h1 class="text-3xl font-bold">Hello, Alex!</h1>
-                            <p class="opacity-80">Ready for a new adventure? 🐾</p>
+                        <div class="home-header">
+                            <div class="home-header-info">
+                                <h1 class="text-3xl font-bold">Hello, Alex!</h1>
+                                <p class="opacity-80">Ready for a new adventure? 🐾</p>
+                            </div>
+                            <button id="home-profile-button" class="profile-trigger" aria-haspopup="dialog" aria-controls="profile-sheet" aria-label="Open profile and settings">
+                                <img src="https://placehold.co/100x100/9370DB/FFFFFF?text=A" alt="Alex Morgan" class="w-12 h-12 rounded-full border-2 border-[var(--glass-border)]">
+                            </button>
                         </div>
                         
                         <div id="upcoming-walk-section">
@@ -177,15 +182,47 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 22v-7a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v7"/><path d="M4 18h.01"/><path d="M2 14h.01"/><path d="M22 14h-.01"/><path d="M18 18h.01"/><path d="M6 18h.01"/><path d="M12 18h.01"/><path d="M16 5.86a4.5 4.5 0 1 0-8 0c0 1.5.63 3.05 1.76 4.14L12 12l2.24-2c1.13-1.09 1.76-2.64 1.76-4.14Z"/></svg>
                 <span>Messages</span>
             </button>
-            <button class="nav-item" data-target="page-dogs">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10.66 22.47a2.5 2.5 0 0 0 2.68 0l.28-.11a1.23 1.23 0 0 1 1.2 0l.35.14a2.5 2.5 0 0 0 2.52 0l.28-.11a1.23 1.23 0 0 1 1.2 0l.35.14a2.5 2.5 0 0 0 2.52 0l.28-.11a1.23 1.23 0 0 1 1.2 0l.35.14a2.5 2.5 0 0 0 2.52 0V8.29a2.5 2.5 0 0 0-1.26-2.17l-.35-.18a1.23 1.23 0 0 1-.6-1.08V4.5a2.5 2.5 0 0 0-2.5-2.5h-2.5"/><path d="M2.12 12.21a2.5 2.5 0 0 0-1.26 2.17v.3a2.5 2.5 0 0 0 2.5 2.5h.5a1.23 1.23 0 0 1 1.2 1.2v.3a2.5 2.5 0 0 0 2.5 2.5h.5a1.23 1.23 0 0 1 1.2 1.2v.3a2.5 2.5 0 0 0 2.5 2.5h.5"/></svg>
-                <span>Dogs</span>
-            </button>
-            <button class="nav-item" data-target="page-profile">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
-                <span>Profile</span>
-            </button>
         </nav>
+        <div id="profile-sheet-overlay" class="profile-sheet-overlay"></div>
+        <aside id="profile-sheet" class="profile-sheet" aria-labelledby="profile-sheet-title" aria-hidden="true" role="dialog">
+            <div class="profile-sheet-handle" aria-hidden="true"></div>
+            <div class="profile-sheet-header">
+                <div>
+                    <p class="text-sm uppercase tracking-wide opacity-70">Account</p>
+                    <h2 id="profile-sheet-title" class="text-2xl font-bold">Alex Morgan</h2>
+                    <p class="opacity-70 text-sm">Manage your profile and pups</p>
+                </div>
+                <button id="profile-sheet-close" class="profile-sheet-close" aria-label="Close profile menu">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
+                </button>
+            </div>
+            <div class="profile-sheet-content">
+                <button class="profile-sheet-link" data-target="page-profile">
+                    <div>
+                        <p class="font-semibold">Profile & Settings</p>
+                        <p class="text-sm opacity-70">Update contact info, payments, and preferences</p>
+                    </div>
+                    <span aria-hidden="true">›</span>
+                </button>
+                <button class="profile-sheet-link" data-target="page-dogs">
+                    <div>
+                        <p class="font-semibold">Manage My Dogs</p>
+                        <p class="text-sm opacity-70">Edit profiles and add new furry friends</p>
+                    </div>
+                    <span aria-hidden="true">›</span>
+                </button>
+                <button class="profile-sheet-link" data-target="page-recurring-walks">
+                    <div>
+                        <p class="font-semibold">Scheduled Walks</p>
+                        <p class="text-sm opacity-70">Review or adjust recurring plans</p>
+                    </div>
+                    <span aria-hidden="true">›</span>
+                </button>
+            </div>
+            <div class="profile-sheet-footer">
+                <button class="btn btn-secondary w-full">Log Out</button>
+            </div>
+        </aside>
     </div>
 
     <!-- Success Modal will be appended to body by JS to ensure it's on top -->
