--- a/index.html
+++ b/index.html
@@ -21,22 +21,23 @@
                 <!-- ===== PAGE: HOME/DASHBOARD ===== -->
                 <section class="page" id="page-home">
                     <div class="space-y-8 stagger-in">
-                        <div class="text-center pt-4">
-                            <h1 class="text-3xl font-bold">Hello, Alex!</h1>
-                            <p class="opacity-80">Ready for a new adventure? 🐾</p>
+                        <div class="pt-4 space-y-2">
+                            <span class="eyebrow block">Today</span>
+                            <h1 class="hero-title">Hello, Alex!</h1>
+                            <p class="text-soft">Ready for a new adventure? 🐾</p>
                         </div>
-                        
-                        <div id="upcoming-walk-section">
-                            <h2 class="text-lg font-semibold mb-3">Upcoming Walk</h2>
-                            <div id="upcoming-walk-card" class="glass-card p-4 flex items-center gap-4 cursor-pointer" data-walk-id="99">
-                                <img id="upcoming-walk-avatar" src="https://placehold.co/100x100/7F00FF/FFFFFF?text=J" alt="Jordan Lee" class="w-12 h-12 rounded-full">
-                                <div>
-                                    <p class="font-semibold" id="upcoming-walk-title">With Jordan Lee</p>
-                                    <p class="text-sm opacity-80" id="upcoming-walk-time">Today at 4:00 PM</p>
+
+                        <div id="upcoming-walk-section" class="space-y-3">
+                            <h2 class="section-title">Upcoming Walk</h2>
+                            <div id="upcoming-walk-card" class="glass-card card-row p-4 cursor-pointer" data-walk-id="99">
+                                <img id="upcoming-walk-avatar" src="https://placehold.co/96x96/0F766E/0B1120?text=J" alt="Jordan Lee" class="w-14 h-14 avatar-frame object-cover">
+                                <div class="space-y-1">
+                                    <p class="font-semibold text-base" id="upcoming-walk-title">With Jordan Lee</p>
+                                    <p class="text-sm text-soft" id="upcoming-walk-time">Today at 4:00 PM</p>
                                 </div>
-                                <div class="ml-auto text-right">
-                                    <p class="font-bold" id="upcoming-walk-duration">30 min</p>
-                                    <p class="text-sm opacity-80" id="upcoming-walk-dogs">🐶 Buddy</p>
+                                <div class="ml-auto text-right space-y-1">
+                                    <span class="badge-muted" id="upcoming-walk-duration">30 min</span>
+                                    <p class="text-sm text-soft" id="upcoming-walk-dogs">🐶 Buddy</p>
                                 </div>
                             </div>
                         </div>
@@ -47,7 +48,7 @@
                         </div>
 
                         <div>
-                             <h2 class="text-lg font-semibold mb-3">Recent Activity</h2>
+                             <h2 class="section-title">Recent Activity</h2>
                              <div class="space-y-3" id="recent-activity-list"></div>
                         </div>
 
@@ -97,11 +98,11 @@
                     <div class="page-header"><div class="placeholder"></div><h1>My Profile</h1></div>
                     <div class="space-y-6">
                         <div class="flex flex-col items-center">
-                            <img src="https://placehold.co/150x150/9370DB/FFFFFF?text=A" class="w-24 h-24 rounded-full border-4 border-[var(--glass-border)]">
+                            <img src="https://placehold.co/160x160/0B1120/1DD3B0?text=A" class="w-24 h-24 avatar-frame object-cover">
                             <h2 class="text-2xl font-bold mt-4">Alex Morgan</h2>
-                            <p class="opacity-70">alex.morgan@email.com</p>
+                            <p class="text-soft">alex.morgan@email.com</p>
                         </div>
-                        <div class="glass-card p-4 divide-y divide-[var(--glass-border)]">
+                        <div class="glass-card p-4 divide-y divide-[var(--surface-border)]">
                             <a href="#" class="profile-link py-3 flex justify-between items-center"><span>Edit Profile</span><span>></span></a>
                             <a href="#" class="profile-link py-3 flex justify-between items-center" data-target="page-payments"><span>Payment Methods</span><span>></span></a>
                             <a href="#" class="profile-link py-3 flex justify-between items-center" data-target="page-promotions"><span>Promotions & Referrals</span><span>></span></a>
@@ -142,42 +143,34 @@
         <!-- BOTTOM NAVIGATION BAR -->
         <nav class="bottom-nav">
             <button class="nav-item active" data-target="page-home">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
-                <span>Home</span>
+                <span class="nav-item-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 10.5 12 3l9 7.5V21a1 1 0 0 1-1 1h-5v-6h-6v6H4a1 1 0 0 1-1-1z"/></svg>
+                </span>
+                <span class="nav-label">Home</span>
             </button>
             <button class="nav-item" data-target="page-inbox">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M2.992 16.342a2 2 0 0 1 .094 1.167l-1.065 3.29a1 1 0 0 0 1.236 1.168l3.413-.998a2 2 0 0 1 1.099.092 10 10 0 1 0-4.777-4.719" />
-                </svg>
-                <span>Messages</span>
+                <span class="nav-item-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.5 8.5 0 0 1 8 8Z"/></svg>
+                </span>
+                <span class="nav-label">Messages</span>
             </button>
             <button class="nav-item nav-item-primary" data-target="page-booking-flow" aria-label="Book a walk">
                 <span class="nav-item-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <circle cx="12" cy="15.5" r="3.5"></circle>
-                        <circle cx="17.5" cy="9" r="1.8"></circle>
-                        <circle cx="6.5" cy="9" r="1.8"></circle>
-                        <circle cx="5" cy="15.5" r="1.5"></circle>
-                        <circle cx="19" cy="15.5" r="1.5"></circle>
-                        <line x1="12" y1="4" x2="12" y2="8"></line>
-                        <line x1="10" y1="6" x2="14" y2="6"></line>
-                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M11.8 11.8 7 7m7.8 4.8 4.8 4.8"/><path d="M7 17s-1.5-1.5 0-3l2-2 3 3-2 2c-1.5 1.5-3 0-3 0Z"/><path d="M17 7s1.5 1.5 0 3l-2 2-3-3 2-2c1.5-1.5 3 0 3 0Z"/><path d="M10.5 10.5 13.5 13.5"/></svg>
                 </span>
-                <span>Book Walk</span>
+                <span class="nav-label">Book Walk</span>
             </button>
             <button class="nav-item" data-target="page-dogs">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M11.25 16.25h1.5L12 17z" />
-                    <path d="M16 14v.5" />
-                    <path d="M4.42 11.247A13.152 13.152 0 0 0 4 14.556C4 18.728 7.582 21 12 21s8-2.272 8-6.444a11.702 11.702 0 0 0-.493-3.309" />
-                    <path d="M8 14v.5" />
-                    <path d="M8.5 8.5c-.384 1.05-1.083 2.028-2.344 2.5-1.931.722-3.576-.297-3.656-1-.113-.994 1.177-6.53 4-7 1.923-.321 3.651.845 3.651 2.235A7.497 7.497 0 0 1 14 5.277c0-1.39 1.844-2.598 3.767-2.277 2.823.47 4.113 6.006 4 7-.08.703-1.725 1.722-3.656 1-1.261-.472-1.855-1.45-2.239-2.5" />
-                </svg>
-                <span>Dogs</span>
+                <span class="nav-item-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 7v6a8 8 0 0 0 16 0V7"/><path d="M9 11c0 .94-.78 1.7-1.75 1.7S5.5 11.94 5.5 11V7.5c0-.83.67-1.5 1.5-1.5s2 .67 2 1.5zm10 0c0 .94-.78 1.7-1.75 1.7S15.5 11.94 15.5 11V7.5c0-.83.67-1.5 1.5-1.5s2 .67 2 1.5z"/><path d="M11 15h2"/></svg>
+                </span>
+                <span class="nav-label">Dogs</span>
             </button>
             <button class="nav-item" data-target="page-profile">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
-                <span>Profile</span>
+                <span class="nav-item-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 12a5 5 0 1 0-5-5 5 5 0 0 0 5 5Z"/><path d="M20 21a8 8 0 0 0-16 0"/></svg>
+                </span>
+                <span class="nav-label">Profile</span>
             </button>
         </nav>
     </div>
