--- a/index.html
+++ b/index.html
@@ -156,19 +156,25 @@
             </button>
             <button class="nav-item nav-item-primary" data-target="page-booking-flow" aria-label="Book a walk">
                 <span class="nav-item-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-                        <path fill="currentColor" d="M13 13.6c-3.46 0-6.28 2.58-6.28 5.7 0 2.35 2.03 4.17 6.28 4.17s6.28-1.82 6.28-4.17c0-3.12-2.82-5.7-6.28-5.7Z"/>
-                        <circle cx="7.6" cy="10.3" r="2.35" fill="currentColor"/>
-                        <circle cx="11" cy="6.9" r="2.1" fill="currentColor"/>
-                        <circle cx="15" cy="6.9" r="2.1" fill="currentColor"/>
-                        <circle cx="18.4" cy="10.3" r="2.35" fill="currentColor"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none" aria-hidden="true">
+                        <path d="M19 4.5a3.8 3.8 0 0 1 3.8 3.8c0 3.4-3.8 7.4-3.8 7.4s-3.8-4-3.8-7.4A3.8 3.8 0 0 1 19 4.5Z" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
+                        <circle cx="19" cy="8.3" r="1.4" fill="currentColor"/>
+                        <circle cx="8" cy="18.5" r="2.8" stroke="currentColor" stroke-width="1.8"/>
+                        <circle cx="8" cy="18.5" r="1.1" fill="currentColor"/>
+                        <path d="M8 15.6C10.3 15.6 11.7 13.9 12.8 11.8S16.4 8 19 8" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </span>
                 <span class="nav-label">Book Walk</span>
             </button>
             <button class="nav-item" data-target="page-dogs">
                 <span class="nav-item-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 7v6a8 8 0 0 0 16 0V7"/><path d="M9 11c0 .94-.78 1.7-1.75 1.7S5.5 11.94 5.5 11V7.5c0-.83.67-1.5 1.5-1.5s2 .67 2 1.5zm10 0c0 .94-.78 1.7-1.75 1.7S15.5 11.94 15.5 11V7.5c0-.83.67-1.5 1.5-1.5s2 .67 2 1.5z"/><path d="M11 15h2"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+                        <path fill="currentColor" d="M12 12.2c-3.24 0-5.9 2.4-5.9 5.23 0 1.97 1.64 3.57 5.9 3.57s5.9-1.6 5.9-3.57c0-2.83-2.66-5.23-5.9-5.23Z"/>
+                        <circle cx="7.4" cy="9.2" r="2" fill="currentColor"/>
+                        <circle cx="16.6" cy="9.2" r="2" fill="currentColor"/>
+                        <circle cx="10" cy="6.1" r="1.8" fill="currentColor"/>
+                        <circle cx="14" cy="6.1" r="1.8" fill="currentColor"/>
+                    </svg>
                 </span>
                 <span class="nav-label">Dogs</span>
             </button>
