Update nav caption to Book a Walk

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     </svg>
                 </span>
                 <span class="nav-label">Book Walk</span>
-                <span class="nav-caption">Plan a walk</span>
+                <span class="nav-caption">Book a Walk</span>
             </button>
             <button class="nav-item" data-target="page-dogs">
                 <span class="nav-item-icon">
