Enhance profile flows with dynamic actions

--- a/index.html
+++ b/index.html
@@ -90,19 +90,17 @@
                 <!-- ===== PAGE: PROFILE ===== -->
                 <section class="page" id="page-profile">
                     <div class="page-header"><div class="placeholder"></div><h1>My Profile</h1></div>
-                    <div class="space-y-6">
-                        <div class="flex flex-col items-center">
-                            <img src="https://placehold.co/160x160/0B1120/1DD3B0?text=A" class="w-24 h-24 avatar-frame object-cover">
-                            <h2 class="text-2xl font-bold mt-4">Alex Morgan</h2>
-                            <p class="text-soft">alex.morgan@email.com</p>
-                        </div>
-                        <div class="glass-card p-4 divide-y divide-[var(--surface-border)]">
-                            <a href="#" class="profile-link py-3 flex justify-between items-center"><span>Edit Profile</span><span>></span></a>
-                            <a href="#" class="profile-link py-3 flex justify-between items-center" data-target="page-payments"><span>Payment Methods</span><span>></span></a>
-                            <a href="#" class="profile-link py-3 flex justify-between items-center"><span>Help & Support</span><span>></span></a>
-                        </div>
-                        <button class="btn btn-secondary w-full">Log Out</button>
-                    </div>
+                    <div class="space-y-6" id="profile-page-content"></div>
+                </section>
+
+                <!-- ===== PAGE: EDIT PROFILE ===== -->
+                <section class="page" id="page-edit-profile">
+                     <!-- Dynamic Content -->
+                </section>
+
+                <!-- ===== PAGE: HELP & SUPPORT ===== -->
+                <section class="page" id="page-help-support">
+                     <!-- Dynamic Content -->
                 </section>
 
                 <!-- ===== PAGE: WALKER PROFILE ===== -->
